--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <title>Todo App</title>
+    <!-- 1. 外部からCSSファイルを読み込み -->
+    <link
+      href="https://jsprimer.net/use-case/todoapp/final/final/index.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Todo App</h1>
-    <script type="module" src="index.js"></script>
+    <!-- 2. class属性をCSSのために指定 -->
+    <div class="todoapp">
+      <!-- 3. id属性をJavaScriptのために指定 -->
+      <form id="js-form">
+        <input
+          id="js-form-input"
+          class="new-todo"
+          type="text"
+          placeholder="What need to be done?"
+          autocomplete="off"
+        />
+      </form>
+      <!-- 4. TodoアプリのメインとなるTodoリスト -->
+      <div id="js-todo-list" class="todo-list">
+        <!-- 動的に更新されるTodoリスト -->
+      </div>
+      <footer class="footer">
+        <!-- 5. Todoアイテム数の表示 -->
+        <span id="js-todo-count">Todoアイテム数: 0</span>
+      </footer>
+    </div>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
